--- a/04/root/apache/Dockerfile
+++ b/04/root/apache/Dockerfile
@@ -6,10 +6,10 @@
 FROM centos:7.5.1804
 
 # プロキシサーバーの設定
-ENV hhtp_proxy http://proxy.your.site.com:8080
+ENV http_proxy http://proxy.your.site.com:8080
 
 # プロキシサーバーの設定
-ENV hhtps_proxy http://proxy.your.site.com:8080
+ENV https_proxy http://proxy.your.site.com:8080
 
 # httpとiproute RPMパッケージをDockerイメージにインストール
 RUN yum install -y httpd iproute && yum clean all
