--- a/04/root/msb/Dockerfile
+++ b/04/root/msb/Dockerfile
@@ -5,8 +5,8 @@
 # 開発用のDocekrイメージ。
 FROM centos:7.5.1804 AS build0001
 
-ENV hhtp_proxy http://proxy.your.site.com:8080
-ENV hhtps_proxy http://proxy.your.site.com:8080
+ENV http_proxy http://proxy.your.site.com:8080
+ENV https_proxy http://proxy.your.site.com:8080
 RUN yum install -y gcc-gfortran libgfortran-static libquadmath-static
 COPY pi.f /tmp
 WORKDIR /tmp
